<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.theking.ble_com.UnitSettingsActivity"
    tools:showIn="@layout/activity_unit_settings"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_temp_unit"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/temp_spinner"
        android:entries="@array/temp_array"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_velocity_unit"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/velocity_spinner"
        android:entries="@array/velocity_array"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_pressure_unit"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pressure_spinner"
        android:entries="@array/pressure_array"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/choose_wheelsize"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_wheelsize"
        android:id="@+id/wheelsizeEditText"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calibrication"
        android:textStyle="bold"
        android:textColor="#df4655" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calibTemp"
        android:id="@+id/calibTempEditTex"
        android:inputType="numberDecimal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onClickSave"/>
</LinearLayout>
